Finalizzazione sezione mail e inizio sezione game

--- a/index.html
+++ b/index.html
@@ -20,15 +20,31 @@
                     <label class="d-block mb-5" for="mail-text">Inserisci la tua mail</label>
                     
                     <input id="mail-text" type="text">
-
-                    <p id="mail-validation" ></p>
+                    <button id="event-validation" class="btn btn-warning mx-3">
+                        verifica ora l'accesso!
+                    </button>
+                    <p id="mail-validation" class="my-5 roundend-pill" >Benvenuto!</p>
                     
                 </div>
 
+                <hr>
 
                 <!-- sezione game -->
-                <div id="game-box" class="col-12">
+                <div id="game-box" class="col-12 d-flex justify-content-center text-center my-5">
+                    <div id="user-match" class="col-2">
+                        ciao
+                    </div>
 
+                    <button id="start-game" class="btn btn-secondary col-2">
+                        Start!
+                    </button>
+
+                    <div id="pc-match" class="col-2">
+                        ciao
+                    </div>
+                </div>
+                <div class="col-12">
+                    <p id="final-score"></p>
                 </div>
             </div>
         </div>
