Finalizzazione esercizio dadi

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 
                 <!-- sezione game -->
                 <div id="game-box" class="col-12 d-flex justify-content-center text-center my-5">
-                    <div id="user-match" class="col-2">
-                        ciao
+                    <div id="user-match" class="col-2 fs-2">
+                        - -
                     </div>
 
                     <button id="start-game" class="btn btn-secondary col-2">
                         Start!
                     </button>
 
-                    <div id="pc-match" class="col-2">
-                        ciao
+                    <div id="pc-match" class="col-2 fs-2">
+                        - -
                     </div>
                 </div>
-                <div class="col-12">
-                    <p id="final-score"></p>
+                <div class="col-12 text-center">
+                    <p class="fs-1 fw-bold" id="final-score"></p>
                 </div>
             </div>
         </div>
