modifiche generiche html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Password Generator Form</title>
+    <title>DajeRoma.mail</title>
 </head>
 <body>
     <main>
@@ -19,7 +19,7 @@
                 <div id="mail-box" class="col-12 text-center">
                     <label class="d-block mb-5" for="mail-text">Inserisci la tua mail</label>
                     
-                    <input id="mail-text" type="text">
+                    <input id="mail-text" type="text" placeholder="tuonome@dajeroma.it">
                     <button id="event-validation" class="btn btn-warning mx-3">
                         verifica ora l'accesso!
                     </button>
